# CodeTalker

./: .gitignore  README.md  pyproject.toml
codetalker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/vocaset/: demo.yaml
main/: demo.py  demo_npy.py  render.py
models/: stage2.py
models/lib/: wav2vec.py
scripts/: batch_inference.sh  batch_inference_npy.sh
