[project]
name = "codetalker"
version = "0.1.0"
description = "CodeTalker: Speech-Driven 3D Facial Animation with Discrete Motion Prior (CVPR 2023)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.30.0",

    # Audio
    "librosa>=0.10.0",

    # Numerical / Scientific
    "numpy<2",
    "scipy>=1.10.0",

    # Computer Vision
    "opencv-python>=4.8.0",

    # 3D Rendering
    "pyrender>=0.1.45",
    "trimesh>=4.0.0",
    "PyOpenGL",
    "pyglet>=2.0,<3",

    # Utilities
    "tqdm",
    "pyyaml",
    "matplotlib",
    "Pillow",
    "einops",
    "six",
    "tensorboardX",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
# psbody-mesh must be installed separately from:
# https://github.com/MPI-IS/mesh
# See instructions in README
